fixed footer covering content on zoom

--- a/css/animals.css
+++ b/css/animals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  margin: 0;
+  margin: 0;  
   padding: 0;
   font-family: 'Montserrat', sans-serif;
 }
@@ -343,7 +343,8 @@ body {
   background-color: #7098DA;
   padding: 20px;
   position: absolute;
-  bottom : 0px;
+  left: 0;
+  bottom: 0;
   width: 100%;
 }
 
