--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-color: whitesmoke;
+  background-color: whitesmoke;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
@@ -118,7 +118,8 @@ a {
     background-color: #7098DA;
     padding: 20px;
     position: absolute;
-    bottom : 0px;
+    bottom: 0;
+    left: 0;
     width: 100%;
 }
 
